# Area_calc

./: .coverage  .coveragerc  .gitignore  pyproject.toml
src/: area_calc.py  figures.py  main.py  protocols.py
src/area_calc/: __init__.py  base.py  circle.py  triangle.py  types_naming.py  validation.py
tests/: conftest.py  test_base.py  test_circle_and_triangle.py  test_figures.py  test_validation.py
